fixed some height and padding + added AppSpacing to ArticleSection and ForumSection

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -40,8 +40,12 @@ a{
     padding: 0 1rem;
 }
 
-.app-section{
-    padding: 5rem 0;
+.app-section-top-padding{
+    padding-top: 5rem;
+}
+
+.app-section-bottom-padding{
+    padding-bottom: 5rem;
 }
 
 .surtitle{
